--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,123 +26,11 @@ jobs:
         run: docker run -d -p 27017:27017 mongo
       - name: Start Docker for redis
         run: docker run -d  -p 6379:6379 redis
-      - name: npm install, build, and test
-        run: |
-          pushd api
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
+      - run: rush install --no-link
+      - run: rush link
+      - run: rush lint
+      - run: rush build --verbose
+      - run: rush test
+      - run: rush coverage
         env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./api/coverage/clover.xml
-          flags: api
-
-  build-banner:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Start Docker for Mongodb
-        run: docker run -d -p 27017:27017 mongo
-      - name: Start Docker for redis
-        run: docker run -d  -p 6379:6379 redis
-      - name: npm install, build, and test
-        run: |
-          pushd banner
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
-        env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./banner/coverage/lcov.info
-          flags: banner
-
-  build-banner-data:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Start Docker for Mongodb
-        run: docker run -d -p 27017:27017 mongo
-      - name: npm install, build, and test
-        run: |
-          pushd banner-data
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
-        env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./banner-data/coverage/lcov.info
-          flags: banner-data
-
-  build-client:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: npm install, build, and test
-        run: |
-          pushd client
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
-        env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./client/coverage/clover.xml
-          flags: client
-
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
