--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,4 +50,7 @@
         "editor.defaultFormatter": "vscode.typescript-language-features",
         "editor.formatOnSave": true
     },
+    "files.associations": {
+        "*.json": "jsonc"
+    }
 }
