--- a/banner-data/package.json
+++ b/banner-data/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "banner-data",
+    "name": "registrum-banner-data",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "npm run build-ts && npm run lint",
-        "build:ts": "tsc",
-        "lint": "eslint \"**/*.{js,ts}\" --quiet",
+        "build": "tsc",
+        "lint": "eslint \"**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
         "start": "node dist/index.js",
         "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
-        "watch": "nodemon --exec ts-node src/index.ts",
+        "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
         "watch:test": "npm run test -- --watch-files src --watch",
+        "watch:node": "nodemon dist/index.js",
         "watch:ts": "tsc -w --preserveWatchOutput"
     },
     "nyc": {
@@ -19,7 +20,7 @@
     "dependencies": {
         "argparse": "^1.0.10",
         "axios": "^0.19.2",
-        "axios-cookiejar-support": "^0.5.1",
+        "axios-cookiejar-support": "^1.0.0",
         "dotenv": "^8.2.0",
         "mongoose": "^5.9.7",
         "node-cron": "^2.0.3",
@@ -27,22 +28,22 @@
     },
     "devDependencies": {
         "@types/argparse": "^1.0.38",
-        "@types/axios": "^0.14.0",
         "@types/chai": "^4.2.11",
-        "@types/dotenv": "^8.2.0",
         "@types/mocha": "^7.0.2",
         "@types/mongoose": "^5.7.10",
         "@types/node": "^13.11.1",
         "@types/node-cron": "^2.0.3",
-        "@types/tough-cookie": "^2.3.7",
+        "@types/tough-cookie": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "chai": "^4.2.0",
         "eslint": "^6.8.0",
         "mocha": "^7.1.1",
-        "nodemon": "^2.0.3",
         "nyc": "^15.0.1",
         "ts-node": "^8.8.2",
-        "typescript": "^3.8.3"
+        "tslib": "^1.11.1",
+        "typescript": "^3.8.3",
+        "nodemon": "^2.0.3",
+        "concurrently": "^5.1.0"
     }
 }
