--- a/banner/.env.example
+++ b/banner/.env.example
@@ -1,5 +1,5 @@
-PORT=4001
-BASE_PATH=/banner
+BANNER_PORT=4001
+BANNER_BASE_PATH=/banner
 CACHE_TIME=10 minutes
-REDIS_URI=redis://localhost
+BANNER_REDIS_URI=redis://localhost
 MONGODB_URI=mongodb://localhost:27017/banner
