--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,25 @@
 {
-    "name": "goto-typescript",
+    "name": "registrum-client",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "build": "webpack --config ./config/webpack.production.config.js && npm run lint",
         "build-lib": "webpack --config ./config/webpack.library.config.js && npm run lint",
-        "lint": "eslint \"src/**/*.{js,ts,tsx}\" --quiet",
+        "lint": "eslint \"src/**/*.{js,ts,tsx}\"",
         "lint:fix": "npm run lint -- --fix",
         "refresh": "node ./scripts/refresh.js",
-        "start": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
-        "test": "jest"
+        "watch": "webpack-dev-server src --inline --config ./config/webpack.development.config.js --open",
+        "start": "npm run watch",
+        "test": "jest --silent"
     },
     "jest": {
         "collectCoverage": true,
         "coverageDirectory": "./coverage/",
+        "globals": {
+            "ts-jest": {
+                "packageJson": "package.json"
+            }
+        },
         "moduleFileExtensions": [
             "ts",
             "tsx",
@@ -43,12 +49,14 @@
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@fortawesome/react-fontawesome": "^0.1.9",
-        "@testing-library/jest-dom": "^5.3.0",
+        "@testing-library/jest-dom": "^5.5.0",
         "@testing-library/user-event": "^10.0.1",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
-        "core-js": "^3.6.4",
-        "date-fns": "^2.11.1",
+        "core-js": "^3.6.5",
+        "date-fns": "^2.12.0",
+        "gud": "^1.0.0",
+        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-bootstrap": "^1.0.0",
@@ -60,34 +68,37 @@
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "regenerator-runtime": "^0.13.5",
+        "tiny-warning": "^1.0.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.9.0",
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/polyfill": "^7.8.7",
-        "@babel/preset-env": "^7.9.0",
+        "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.9.4",
         "@babel/preset-typescript": "^7.9.0",
+        "@babel/runtime": "^7.9.2",
+        "@testing-library/dom": "^7.2.1",
         "@testing-library/react": "^10.0.2",
         "@types/enzyme": "^3.10.5",
         "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/jest": "^25.2.0",
-        "@types/node": "^13.11.0",
+        "@types/jest": "^25.2.1",
+        "@types/node": "^13.11.1",
         "@types/node-sass": "^4.11.0",
-        "@types/react": "^16.9.32",
+        "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.6",
         "@types/react-redux": "^7.1.7",
-        "@types/react-router-dom": "^5.1.3",
+        "@types/react-router-dom": "^5.1.4",
         "@types/react-transition-group": "^4.2.4",
-        "@types/redux": "^3.6.0",
-        "@types/redux-thunk": "^2.1.0",
-        "@typescript-eslint/eslint-plugin": "^2.26.0",
-        "@typescript-eslint/parser": "^2.26.0",
+        "@types/testing-library__react": "^10.0.1",
+        "@typescript-eslint/eslint-plugin": "^2.27.0",
+        "@typescript-eslint/parser": "^2.27.0",
         "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^5.1.1",
-        "css-loader": "^3.4.2",
+        "css-loader": "^3.5.2",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
@@ -100,15 +111,18 @@
         "file-loader": "^6.0.0",
         "identity-obj-proxy": "^3.0.0",
         "image-webpack-loader": "^6.0.0",
-        "jest": "^25.2.7",
+        "jest": "^25.3.0",
         "node-sass": "^4.13.1",
         "prettier": "^2.0.4",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "ts-jest": "^25.3.1",
+        "tslib": "^1.11.1",
         "typescript": "^3.8.3",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
+        "webpack-dev-server": "^3.10.3",
+        "nodemon": "^2.0.3",
+        "concurrently": "^5.1.0"
     }
 }
