--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,20 +2,37 @@ version: "3.7"
 
 services:
 
-  redis:
-    image: redis:alpine
+  banner-redis:
+    image: redis
     restart: always
-    volumes:
-      - redis-data:/data
-    command: --appendonly yes
     networks:
       - registrum-net
+    volumes:
+      - banner-redis-data:/data
+    command: --appendonly yes
+
+  api-redis:
+    image: redis
+    restart: always
+    networks:
+      - registrum-net
+    volumes:
+      - api-redis-data:/data
+    command: --appendonly yes
 
   mongo:
     restart: always
     image: mongo:latest
     volumes:
       - mongo-data:/data/db
+    networks:
+      - registrum-net
+
+  postfix:
+    build:
+      context: postfix
+    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/postfix:master
+    restart: always
     networks:
       - registrum-net
 
@@ -27,12 +44,12 @@ services:
     restart: always
     environment:
       - MONGODB_URI=mongodb://mongo:27017/registrum-api
-      - REDIS_URL=redis://redis
+      - API_REDIS_URI=redis://api-redis
       - NODE_ENV=production
-      - BASE_PATH=/api
+      - API_BASE_PATH=/api
     depends_on:
-      - mongo
-      - redis
+      - api-redis
+      - banner-redis
     networks:
       - registrum-net
 
@@ -44,12 +61,12 @@ services:
     restart: always
     environment:
       - MONGODB_URI=mongodb://mongo:27017/registrum-banner
-      - REDIS_URL=redis://redis
+      - BANNER_REDIS_URI=redis://banner-redis
       - NODE_ENV=production
-      - BASE_PATH=/banner
+      - BANNER_BASE_PATH=/banner
     depends_on:
-      - mongo
-      - redis
+      - api-redis
+      - banner-redis
     networks:
       - registrum-net
 
@@ -85,4 +102,5 @@ networks:
 
 volumes:
   mongo-data:
-  redis-data:
+  banner-redis-data:
+  api-redis-data:
