--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,35 @@ services:
   mongo:
     image: mongo
     restart: always
-    ports:
-      - 27017:27017
     networks:
       - registrum-net
     volumes:
       - mongo-data:/data/db
 
-  redis:
+  banner-redis:
     image: redis
     restart: always
-    ports:
-      - 6379:6379
     networks:
       - registrum-net
     volumes:
-      - redis-data:/data
+      - banner-redis-data:/data
     command: --appendonly yes
+
+  api-redis:
+    image: redis
+    restart: always
+    networks:
+      - registrum-net
+    volumes:
+      - api-redis-data:/data
+    command: --appendonly yes
+
+  postfix:
+    build:
+      context: postfix
+    restart: always
+    networks:
+      - registrum-net
 
   mongo-express:
     image: mongo-express
@@ -38,92 +50,41 @@ services:
     image: rediscommander/redis-commander:latest
     restart: always
     environment:
-      - REDIS_HOSTS=local:redis:6379
+      - REDIS_HOSTS=api:api-redis:6379,banner:banner-redis:6379
     ports:
       - 8082:8081
     depends_on:
-      - redis
+      - api-redis
+      - banner-redis
     networks:
       - registrum-net
 
-  api:
-    build:
-      context: api
-      target: dev
-    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/api:dev
+  app-dev:
+    image: node:buster
     restart: always
     working_dir: /usr/src/app
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/registrum-api
-      - REDIS_URL=redis://redis
-      - BASE_PATH=/api
-      - BANNER_URL=http://banner:4001/
-    ports:
-      - 4000:4000
-    volumes:
-      - ./api:/usr/src/app
-      - node_modules_api:/usr/src/app/node_modules
-    depends_on:
-      - mongo
-      - redis
-    networks:
-      - registrum-net
-
-  banner:
-    build:
-      context: banner
-      target: dev
-    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/banner:dev
-    restart: always
-    working_dir: /usr/src/app
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017/registrum-banner
-      - REDIS_URL=redis://redis
-      - BASE_PATH=/banner
-    ports:
-      - 4001:4001
-    volumes:
-      - ./banner:/usr/src/app
-      - node_modules_banner:/usr/src/app/node_modules
-    depends_on:
-      - mongo
-      - redis
-    networks:
-      - registrum-net
-
-  banner-data:
-    build:
-      context: banner-data
-      target: dev
-    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/banner-data:dev
-    restart: always
-    working_dir: /usr/src/app
-    environment:
-      - MONGODB_URI=mongodb://mongo:27017/registrum-banner-data
-    volumes:
-      - ./banner-data:/usr/src/app
-      - node_modules_banner-data:/usr/src/app/node_modules
-    depends_on:
-      - mongo
-    networks:
-      - registrum-net
-
-  client:
-    build:
-      context: client
-      target: dev
-    image: docker.pkg.github.com/ckanich-classrooms/final-project-dream-team-1/client:dev
-    restart: always
-    working_dir: /usr/src/app
-    environment:
+      - MONGODB_URI=mongodb://mongo:27017/registrum
+      - API_REDIS_URL=redis://api-redis
+      - API_PORT=4000
+      - API_BASE_PATH=/api
       - API_PROXY_URL=http://api:4000
-      - BASE_PATH=/api
+      - BANNER_REDIS_URL=redis://banner-redis
+      - BANNER_PORT=4001
+      - BANNER_BASE_PATH=/banner
       - CLIENT_PORT=3000
     ports:
       - 3000:3000
+      - 4000:4000
+      - 4001:4001
     volumes:
-      - ./client:/usr/src/app
-      - node_modules_client:/usr/src/app/node_modules
+      - .:/usr/src/app/
+    entrypoint: bash
+    command: init.sh
+    depends_on:
+      - mongo
+      - api-redis
+      - banner-redis
     networks:
       - registrum-net
 
@@ -131,9 +92,6 @@ networks:
   registrum-net:
 
 volumes:
-  node_modules_api:
-  node_modules_banner:
-  node_modules_banner-data:
-  node_modules_client:
   mongo-data:
-  redis-data:
+  banner-redis-data:
+  api-redis-data:
