--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -51,3 +51,14 @@ jobs:
         docker build -t docker.pkg.github.com/${{ github.repository }}/banner-data:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
         echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
         docker push docker.pkg.github.com/${{ github.repository }}/banner-data:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
+
+  publish-postfix:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: postfix - build and publish image
+      run: |
+        pushd ./postfix
+        docker build -t docker.pkg.github.com/${{ github.repository }}/postfix:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        docker push docker.pkg.github.com/${{ github.repository }}/postfix:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
