--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,7 @@ jobs:
           echo "::set-output name=dir::$(npm config get cache)"
       - uses: actions/cache@v1
         with:
-          path: common/temp/node_modules
+          path: common/temp/pnpm-store
           key: ${{ runner.os }}-node-${{ hashFiles('common/config/rush/shrinkwrap.yml') }}
           restore-keys: |
             ${{ runner.os }}-node-
