import banner package, remove dups, db config updates

--- a/banner-data/tsconfig.json
+++ b/banner-data/tsconfig.json
@@ -4,8 +4,9 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2019",
     "noImplicitAny": true,
-    "moduleResolution": "node",
     "sourceMap": true,
+    "moduleResolution": "node",
+    "declaration": true,
     "lib": ["es2020"],
     "outDir": "dist",
     "baseUrl": ".",
