--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -7,9 +7,19 @@
     "extends": [
         "plugin:@typescript-eslint/recommended"
     ],
+    "plugins": [
+        "prettier"
+    ],
     "rules": {
+        "prettier/prettier": [
+            "warn",
+            {
+                "bracketSpacing": true,
+                "jsxBracketSameLine": false
+            }
+        ],
         "max-len": [
-            "error",
+            "warn",
             {
                 "code": 100,
                 "tabWidth": 4,
