--- a/api/package.json
+++ b/api/package.json
@@ -91,7 +91,10 @@
         "chai": "^4.2.0",
         "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-plugin-prettier": "^3.1.2",
         "nodemon": "^2.0.2",
+        "prettier": "^2.0.4",
         "supertest": "^4.0.2",
         "ts-jest": "^25.3.1",
         "ts-node": "^8.8.1",
