--- a/banner/package.json
+++ b/banner/package.json
@@ -57,9 +57,12 @@
         "@typescript-eslint/parser": "^2.26.0",
         "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-plugin-prettier": "^3.1.2",
         "mocha": "^7.1.1",
         "nodemon": "^2.0.3",
         "nyc": "^15.0.0",
+        "prettier": "^2.0.4",
         "ts-node": "^8.8.2",
         "typescript": "^3.8.3"
     }
