--- a/client/package.json
+++ b/client/package.json
@@ -91,8 +91,10 @@
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.1",
         "eslint-config-react": "^1.1.7",
         "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^3.0.0",
         "file-loader": "^6.0.0",
@@ -100,6 +102,7 @@
         "image-webpack-loader": "^6.0.0",
         "jest": "^25.2.7",
         "node-sass": "^4.13.1",
+        "prettier": "^2.0.4",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "ts-jest": "^25.3.1",
