--- a/banner-data/.eslintrc
+++ b/banner-data/.eslintrc
@@ -5,31 +5,11 @@
         "sourceType": "module"
     },
     "extends": [
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint",
+        "plugin:prettier/recommended"
     ],
     "rules": {
-        "max-len": [
-            "error",
-            {
-                "code": 100,
-                "tabWidth": 4,
-                "ignoreUrls": true,
-                "ignoreTemplateLiterals": true
-            }
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "never"
-        ],
-        "no-tabs": "error",
-        "arrow-parens": [
-            "warn",
-            "as-needed"
-        ],
         "no-trailing-spaces": "warn",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": 1,
