--- a/banner-data/package.json
+++ b/banner-data/package.json
@@ -45,6 +45,9 @@
         "tslib": "^1.11.1",
         "typescript": "^3.8.3",
         "nodemon": "^2.0.3",
-        "concurrently": "^5.1.0"
+        "concurrently": "^5.1.0",
+        "prettier": "^2.0.4",
+        "eslint-plugin-prettier": "^3.1.2",
+        "eslint-config-prettier": "^6.10.1"
     }
 }
