--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,8 @@
-BANNER_PORT=4001
-BANNER_BASE_PATH=/banner
-CACHE_TIME=10 minutes
 MONGODB_URI=mongodb://localhost:27017/registrum/?replicaSet=rsName
 API_REDIS_URI=redis://localhost:6379
 BANNER_REDIS_URI=redis://localhost:6380
 API_PROXY_URL=http://api:4000
+API_PORT=4000
+API_BASE_PATH=/api
+SENDGRID_EMAIL_ADDRESS=
+SENDGRID_API_KEY=
