--- a/banner-data/.env.example
+++ b/banner-data/.env.example
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/banner-data
 REFRESH_INTERVAL=0 0 * * *
+MONGODB_URI=mongodb://localhost:27017/registrum/?replicaSet=rsName
+BANNER_REDIS_URI=redis://localhost:6380
