--- a/api/.env.example
+++ b/api/.env.example
@@ -4,5 +4,6 @@ BANNER_REDIS_URI=redis://localhost:6380
 API_PROXY_URL=http://api:4000
 API_PORT=4000
 API_BASE_PATH=/api
+BANNER_URL=http://localhost:4001
 SENDGRID_EMAIL_ADDRESS=
 SENDGRID_API_KEY=
