💥 monorepo setup + banner routes + banner sync (#62)
* added banner-data project

* cleanup npm scripts

* :sparkes: implemented banner-mongo sync utility

* fix builds

* only searching CS (for now)

* moved types to lib

* add webhook controleler, update banner-data updates

* rushified project

* fix ci

* ci cache update

* update docs

* remove lerna badge

* update ci pnpm store cache

* update docs

* removed duped libs

* updated term,subject,crn routes

* import banner package, remove dups, db config updates

* added courses route

* shrinkwrap update

* fix linter + run linter

* update pnpm, sort package-json, update ci cache, cleanup

* update docs & .env.example files

* cleanup

* update docs

* cleanup

--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -40,3 +40,25 @@ jobs:
         docker build -t docker.pkg.github.com/${{ github.repository }}/banner:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
         echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
         docker push docker.pkg.github.com/${{ github.repository }}/banner:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
+
+  publish-banner-data:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: banner-data - build and publish image
+      run: |
+        pushd ./banner-data
+        docker build -t docker.pkg.github.com/${{ github.repository }}/banner-data:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        docker push docker.pkg.github.com/${{ github.repository }}/banner-data:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
+
+  publish-postfix:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: postfix - build and publish image
+      run: |
+        pushd ./postfix
+        docker build -t docker.pkg.github.com/${{ github.repository }}/postfix:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+        docker push docker.pkg.github.com/${{ github.repository }}/postfix:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
