--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
 
-  build-api:
+  build-rush:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,96 +18,25 @@ jobs:
           echo "::set-output name=dir::$(npm config get cache)"
       - uses: actions/cache@v1
         with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: common/temp/pnpm-store
+          key: ${{ runner.os }}-node-${{ hashFiles('common/config/rush/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Start Docker for Mongodb
         run: docker run -d -p 27017:27017 mongo
       - name: Start Docker for redis
         run: docker run -d  -p 6379:6379 redis
-      - name: npm install, build, and test
-        run: |
-          pushd api
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
+      - name: rush install
+        run: node common/scripts/install-run-rush.js install --no-link
+      - name: rush link
+        run: node common/scripts/install-run-rush.js link
+      - name: rush lint
+        run: node common/scripts/install-run-rush.js lint
+      - name: rush build
+        run: node common/scripts/install-run-rush.js build --verbose
+      - name: rush test
+        run: node common/scripts/install-run-rush.js test
+      - name: rush coverage
+        run: node common/scripts/install-run-rush.js coverage
         env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./api/coverage/clover.xml
-          flags: api
-
-  build-banner:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: Start Docker for Mongodb
-        run: docker run -d -p 27017:27017 mongo
-      - name: Start Docker for redis
-        run: docker run -d  -p 6379:6379 redis
-      - name: npm install, build, and test
-        run: |
-          pushd banner
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
-        env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./banner/coverage/lcov.info
-          flags: banner
-
-  build-client:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-      - name: Get npm cache directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v1
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - name: npm install, build, and test
-        run: |
-          pushd client
-          npm ci
-          npm run build --if-present
-          npm run test --if-present
-          popd
-        env:
-          CI: true
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./client/coverage/clover.xml
-          flags: client
-        
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
