--- a/api/package.json
+++ b/api/package.json
@@ -1,25 +1,26 @@
 {
-    "name": "final-project-dream-team-1",
+    "name": "registrum-api",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "npm run build-ts && npm run lint",
-        "build-ts": "node_modules/.bin/tsc",
-        "debug": "npm run build && npm run watch-debug",
-        "lint": "eslint \"src/**/*.{js,ts}\" --quiet",
+        "build": "tsc",
+        "lint": "eslint \"src/**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
-        "serve": "node dist/server.js",
-        "serve-debug": "nodemon --inspect dist/server.js",
-        "start": "npm run serve",
-        "test": "jest -i",
-        "watch": "npm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-        "watch-node": "nodemon dist/server.js",
-        "watch-test": "npm run test -- --watchAll",
-        "watch-ts": "tsc -w --preserveWatchOutput"
+        "start": "node dist/server.js",
+        "test": "jest -i --silent",
+        "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
+        "watch:node": "nodemon --watch dist dist/index.js",
+        "watch:test": "npm run test -- --watchAll",
+        "watch:ts": "tsc -w --preserveWatchOutput"
     },
     "jest": {
         "collectCoverage": true,
         "coverageDirectory": "./coverage/",
+        "globals": {
+            "ts-jest": {
+                "packageJson": "package.json"
+            }
+        },
         "preset": "ts-jest",
         "testEnvironment": "node",
         "testPathIgnorePatterns": [
@@ -33,7 +34,7 @@
         "@sendgrid/mail": "^7.0.0",
         "async": "^3.2.0",
         "axios": "^0.19.2",
-        "axios-cookiejar-support": "^0.5.1",
+        "axios-cookiejar-support": "^1.0.0",
         "bcrypt": "^4.0.1",
         "bcrypt-nodejs": "^0.0.3",
         "compression": "^1.7.4",
@@ -45,7 +46,7 @@
         "express-flash": "0.0.2",
         "express-session": "^1.17.0",
         "express-validator": "^6.4.0",
-        "jest": "^25.2.7",
+        "jest": "^25.3.0",
         "lodash": "^4.17.15",
         "lusca": "^1.6.1",
         "mongoose": "^5.9.7",
@@ -57,8 +58,7 @@
         "request": "^2.88.2",
         "request-promise": "^4.2.5",
         "tough-cookie": "^4.0.0",
-        "uuid": "^7.0.3",
-        "winston": "^3.2.1"
+        "uuid": "^7.0.3"
     },
     "devDependencies": {
         "@types/async": "^3.2.0",
@@ -66,38 +66,38 @@
         "@types/bcrypt-nodejs": "^0.0.31",
         "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
-        "@types/concurrently": "^5.1.0",
         "@types/cors": "^2.8.6",
         "@types/errorhandler": "^1.5.0",
-        "@types/eslint": "^6.1.9",
-        "@types/express": "^4.17.4",
+        "@types/eslint": "^6.8.0",
+        "@types/express": "^4.17.6",
         "@types/express-flash": "0.0.2",
         "@types/express-session": "^1.17.0",
-        "@types/jest": "^25.2.0",
+        "@types/jest": "^25.2.1",
         "@types/lodash": "^4.14.149",
         "@types/lusca": "^1.6.1",
-        "@types/mongoose": "^5.7.8",
+        "@types/mongoose": "^5.7.10",
         "@types/morgan": "^1.9.0",
-        "@types/node": "^13.11.0",
+        "@types/node": "^13.11.1",
         "@types/nodemailer": "^6.4.0",
         "@types/passport": "^1.0.3",
         "@types/passport-local": "^1.0.33",
         "@types/request": "^2.48.4",
         "@types/request-promise": "^4.1.46",
         "@types/supertest": "^2.0.8",
-        "@types/winston": "^2.4.4",
-        "@typescript-eslint/eslint-plugin": "^2.26.0",
-        "@typescript-eslint/parser": "^2.26.0",
+        "@types/tough-cookie": "^4.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.27.0",
+        "@typescript-eslint/parser": "^2.27.0",
         "chai": "^4.2.0",
         "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-prettier": "^3.1.2",
-        "nodemon": "^2.0.2",
+        "nodemon": "^2.0.3",
         "prettier": "^2.0.4",
         "supertest": "^4.0.2",
         "ts-jest": "^25.3.1",
-        "ts-node": "^8.8.1",
+        "ts-node": "^8.8.2",
+        "tslib": "^1.11.1",
         "typescript": "^3.8.3"
     }
 }
