--- a/banner/.env.example
+++ b/banner/.env.example
@@ -1,4 +1,7 @@
-PORT=8088
-BASE_PATH=/banner
+BANNER_PORT=4001
+BANNER_BASE_PATH=/banner
 CACHE_TIME=10 minutes
-REDIS_URI=redis://localhost
+MONGODB_URI=mongodb://localhost:27017/registrum/?replicaSet=rsName
+API_REDIS_URI=redis://localhost:6379
+BANNER_REDIS_URI=redis://localhost:6380
+API_PROXY_URL=http://api:4000
