--- a/banner/package.json
+++ b/banner/package.json
@@ -1,21 +1,17 @@
 {
-    "name": "banner",
+    "name": "registrum-banner",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "npm run build-ts && npm run lint",
-        "build-ts": "tsc",
-        "debug": "npm run build && npm run watch-debug",
-        "lint": "eslint \"**/*.{js,ts}\" --quiet",
+        "build": "tsc",
+        "lint": "eslint \"**/*.{js,ts}\"",
         "lint:fix": "npm run lint -- --fix",
-        "serve": "node dist/index.js",
-        "serve-debug": "nodemon --inspect dist/index.js",
-        "start": "npm run serve",
+        "start": "node dist/index.js",
         "test": "nyc --reporter=lcov --reporter=text mocha -r ts-node/register src/tests/**/*.spec.ts",
-        "watch": "npm run build && concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
-        "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
-        "watch-node": "nodemon dist/index.js",
-        "watch-test": "npm run test -- --watch-files src --watch",
-        "watch-ts": "tsc -w --preserveWatchOutput"
+        "watch": "concurrently -n ts,node \"npm run watch:ts\" \"npm run watch:node\"",
+        "watch:node": "nodemon --watch dist dist/index.js",
+        "watch:test": "npm run test -- --watch-files src --watch",
+        "watch:ts": "tsc -w --preserveWatchOutput"
     },
     "nyc": {
         "exclude": "**/*.spec.ts",
@@ -24,14 +20,13 @@
     "dependencies": {
         "apicache": "^1.5.3",
         "axios": "^0.19.2",
-        "axios-cookiejar-support": "^0.5.1",
-        "chai": "^4.2.0",
+        "axios-cookiejar-support": "^1.0.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "ioredis": "^4.16.1",
-        "mongodb": "^3.5.5",
+        "ioredis": "^4.16.2",
+        "mongoose": "^5.9.7",
         "morgan": "^1.10.0",
         "request": "^2.88.2",
         "request-promise-native": "^1.0.8",
@@ -39,31 +34,33 @@
     },
     "devDependencies": {
         "@types/apicache": "^1.2.2",
-        "@types/axios": "^0.14.0",
         "@types/chai": "^4.2.11",
         "@types/compression": "^1.7.0",
         "@types/cors": "^2.8.6",
-        "@types/dotenv": "^8.2.0",
-        "@types/express": "^4.17.3",
+        "@types/express": "^4.17.6",
         "@types/ioredis": "^4.14.9",
         "@types/mocha": "^7.0.2",
-        "@types/mongodb": "^3.5.4",
+        "@types/mongoose": "^5.7.10",
         "@types/morgan": "^1.9.0",
-        "@types/node": "^13.11.0",
+        "@types/node": "^13.11.1",
         "@types/request": "^2.48.4",
         "@types/request-promise-native": "^1.0.17",
-        "@types/tough-cookie": "^2.3.6",
-        "@typescript-eslint/eslint-plugin": "^2.26.0",
-        "@typescript-eslint/parser": "^2.26.0",
+        "@types/tough-cookie": "^4.0.0",
+        "@typescript-eslint/eslint-plugin": "^2.27.0",
+        "@typescript-eslint/parser": "^2.27.0",
+        "chai": "^4.2.0",
         "concurrently": "^5.1.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-prettier": "^3.1.2",
+        "is-redirect": "^1.0.0",
         "mocha": "^7.1.1",
         "nodemon": "^2.0.3",
-        "nyc": "^15.0.0",
+        "nyc": "^15.0.1",
+        "pify": "^5.0.0",
         "prettier": "^2.0.4",
         "ts-node": "^8.8.2",
+        "tslib": "^1.11.1",
         "typescript": "^3.8.3"
     }
 }
