--- a/client/package.json
+++ b/client/package.json
@@ -70,7 +70,9 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
-        "tiny-warning": "^1.0.3"
+        "tiny-warning": "^1.0.3",
+        "react-select": "~3.1.0",
+        "@types/react-select": "~3.0.11"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
