:bug: Fix windows path and cocurrently not exiting properly

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,6 @@ yarn.lock                    merge=binary
 # For more information, see this issue: https://github.com/microsoft/rushstack/issues/1088
 #
 *.json                       linguist-language=JSON-with-Comments
+
+# Make LF line encoding required
+* text=auto eol=lf
