--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -24,5 +24,6 @@
     "start_url": ".",
     "display": "fullscreen",
     "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "background_color": "#ffffff",
+    "gcm_sender_id": "565395438650"
 }
