--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
         "@fortawesome/react-fontawesome": "^0.1.9",
         "@testing-library/jest-dom": "^5.5.0",
         "@testing-library/user-event": "^10.0.1",
+        "@types/react-select": "~3.0.11",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "core-js": "^3.6.5",
@@ -63,6 +64,7 @@
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
+        "react-select": "~3.1.0",
         "react-toastify": "^5.5.0",
         "react-transition-group": "^4.3.0",
         "redux": "^4.0.5",
@@ -71,8 +73,7 @@
         "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
         "tiny-warning": "^1.0.3",
-        "react-select": "~3.1.0",
-        "@types/react-select": "~3.0.11"
+        "prettier": "^2.0.5"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
@@ -99,6 +100,7 @@
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "babel-loader": "^8.1.0",
+        "concurrently": "^5.1.0",
         "copy-webpack-plugin": "^5.1.1",
         "css-loader": "^3.5.2",
         "enzyme": "^3.11.0",
@@ -115,7 +117,7 @@
         "image-webpack-loader": "^6.0.0",
         "jest": "^25.3.0",
         "node-sass": "^4.13.1",
-        "prettier": "^2.0.4",
+        "nodemon": "^2.0.3",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "ts-jest": "^25.3.1",
@@ -123,8 +125,6 @@
         "typescript": "^3.8.3",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
-        "nodemon": "^2.0.3",
-        "concurrently": "^5.1.0"
+        "webpack-dev-server": "^3.10.3"
     }
 }
