--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,6 @@
         "@fortawesome/react-fontawesome": "^0.1.9",
         "@testing-library/jest-dom": "^5.5.0",
         "@testing-library/user-event": "^10.0.1",
-        "@types/react-select": "~3.0.11",
         "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "core-js": "^3.6.5",
@@ -72,8 +71,7 @@
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "regenerator-runtime": "^0.13.5",
-        "tiny-warning": "^1.0.3",
-        "prettier": "^2.0.5"
+        "tiny-warning": "^1.0.3"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
@@ -125,6 +123,7 @@
         "typescript": "^3.8.3",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
+        "webpack-dev-server": "^3.10.3",
+        "@types/react-select": "~3.0.12"
     }
 }
