--- a/api/package.json
+++ b/api/package.json
@@ -54,13 +54,13 @@
         "nodemailer": "^6.4.6",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "redis": "^3.0.2",
         "request": "^2.88.2",
         "request-promise": "^4.2.5",
         "tough-cookie": "^4.0.0",
         "uuid": "^7.0.3",
         "registrum-banner": "^0.1.0",
-        "axios-mock-adapter": "~1.18.1"
+        "axios-mock-adapter": "~1.18.1",
+        "ioredis": "^4.16.3"
     },
     "devDependencies": {
         "@types/async": "^3.2.0",
@@ -100,6 +100,8 @@
         "ts-jest": "^25.3.1",
         "ts-node": "^8.8.2",
         "tslib": "^1.11.1",
-        "typescript": "^3.8.3"
+        "typescript": "^3.8.3",
+        "@types/ioredis": "^4.16.0",
+        "@types/connect-redis": "^0.0.13"
     }
 }
