cleanup and refine cd

--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  publish-app-images:
+  publish-app-images-release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -24,14 +24,3 @@ jobs:
           docker push docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
           docker push docker.pkg.github.com/${{ github.repository }}/client:latest
         done
-
-  publish-postfix:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: postfix - build and publish image
-      run: |
-        pushd ./postfix
-        docker build -t docker.pkg.github.com/${{ github.repository }}/postfix:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
-        docker push docker.pkg.github.com/${{ github.repository }}/postfix:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
