--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,19 +3,22 @@ name: Docker CI
 on: [push, pull_request]
 
 jobs:
-  build-docker:
+  publish-app-images:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: Build the Docker image
-        run: |
-          docker-compose build --pull --parallel
-      - if: github.ref == 'refs/heads/master'
-        name: Push the Docker image
-        run: |
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
-          docker-compose -f docker-compose.yml push
+    - uses: actions/checkout@v2
+    - name: client - build and publish image
+      run: |
+        echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
+
+        projects=( api banner banner-data client )
+        for $project in "${projects[@]}"
+        do
+          docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') .
+          docker tag docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g') docker.pkg.github.com/${{ github.repository }}/client:master
+          docker push docker.pkg.github.com/${{ github.repository }}/client:$(echo ${{ github.ref }} | sed 's/refs\/tags\///g')
+          docker push docker.pkg.github.com/${{ github.repository }}/client:master
+        done
 
   build-dev-docker:
     runs-on: ubuntu-latest
