--- a/.github/workflows/docker-cd-master.yml
+++ b/.github/workflows/docker-cd-master.yml
@@ -15,7 +15,7 @@ jobs:
         echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com --username ${{ github.actor }} --password-stdin
 
         projects=( api banner banner-data client )
-        for $project in "${projects[@]}"
+        for project in "${projects[@]}"
         do
           docker build --target $project -t docker.pkg.github.com/${{ github.repository }}/client:$(echo ${GITHUB_SHA} | cut -c1-8) .
           docker tag docker.pkg.github.com/${{ github.repository }}/client:$(echo ${GITHUB_SHA} | cut -c1-8) docker.pkg.github.com/${{ github.repository }}/client:master
